-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.1
-
None
-
484a186f50de59279cf3c02088273ff114f4cfcf
On Windows when receiving a datagram via QUdpSocket::receiveDatagram the destinationAddress/Port is not set on the returned QNetworkDatagram.
This would especially useful for multicast to tell the various multicast IP adresses apart.
See minimal example attached.
- relates to
-
QTBUG-64718 Windows: QUdpSocket::readDatagram sender address is not assigned
-
- Closed
-
| For Gerrit Dashboard: QTBUG-63605 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 207658,9 | QNativeSocketEngine/Win: fix getting the datagram destination | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |