tests/auto/network/socket/qudpsocket/test/test.pro
@@ -1,6 +1,7 @@
 CONFIG += testcase
 testcase.timeout = 800 # this test is slow
 SOURCES  += ../tst_qudpsocket.cpp
+INCLUDEPATH += ../../../../../shared/
 QT = core network testlib
 
 MOC_DIR=tmp
